--- a/app/css/snorql.css
+++ b/app/css/snorql.css
@@ -3,7 +3,7 @@
 img{ width:16px;position:absolute;top:10px;left:50%;}
 
 .link { background: url(link.png) center right no-repeat; padding-right: 13px; }
-.queryresults { border-collapse: collapse; margin-top: 0.3em; }
+.queryresults { border-collapse: collapse; margin-top: 0.3em;width:100%;font-size:90%; }
 .queryresults td, .queryresults th { padding: 0.2em 0.4em; vertical-align: top; }
 .uri { white-space: nowrap; }
 .uri a, a.uri { text-decoration: none; }
@@ -18,11 +18,23 @@ img{ width:16px;position:absolute;top:10px;left:50%;}
 .snorql h1, .snorql h2 { color: #400; }
 .snorql #header, .snorql .section { background: #ccf; }
 .snorql .queryresults th { background: #88c; }
-.snorql .queryresults .odd td { background: #f2f2ff; }
-.snorql .queryresults .even td { background: #ddf; }
+.snorql .queryresults .odd td { background: #f2f2ff;max-width: 30%; }
+.snorql .queryresults .even td { background: #ddf;max-width: 30%; }
 
 .browser h1, .browser h2 { color: #810; }
 .browser #header, .browser .section { background: #beb; }
 .browser .queryresults th { background: #7b7; }
 .browser .queryresults .odd td { background: #f0fcf0; }
 .browser .queryresults .even td { background: #d4f6d4; }
+
+.uri .media{
+	left: 0;
+	top: 0;
+	position: relative;
+	width: 100%;	
+}
+
+.snorql-info{
+	color:gray;
+	padding: 10px;
+}
