--- a/app/assets/partials/home.html
+++ b/app/assets/partials/home.html
@@ -27,23 +27,25 @@
           <div class=" snorql " style="min-height:60px">
             <div class="snorql-info" ng-show="waiting">{{message}}</div>
             <div class="snorql-info" ng-show="error">{{error}}</div>
+            <div class="snorql-info" ng-show="executionTime">Query time is {{executionTime}}[s]</div>
             <div class=" " sparql-formatter="snorql.result"></div>
           </div>
           
           
           <!-- DISPLAY SITE INFO -->
-          <div class="row" ng-show="!snorql.result.head.vars">
-            <div class="col-6 col-sm-6 col-lg-4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <div class=" headlines" ng-show="!snorql.result.head.vars">
+            <div class="">
+              <h2>Get more than entries</h2>
+              <p>How to build sequences subsets centered around sites of interest <em>(in this case phosphotyrosines)</em> for further alignment and context pattern analysis</p>
+              <p><a class="btn btn-default" href="#" role="button" ng-click="selectExample(0)">View query &raquo;</a></p>
+
             </div><!--/span-->
-            <div class="col-6 col-sm-6 col-lg-4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+            <div class="">
+              <h2>Existence level of proteins</h2>
+              <p>Count of all proteins by existence level</p>
+              <p><a class="btn btn-default" href="#" role="button" ng-click="selectExample(1)">View details &raquo;</a></p>
             </div><!--/span-->
-            <div class="col-6 col-sm-6 col-lg-4">
+            <div class="">
               <h2>Heading</h2>
               <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
               <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
@@ -76,7 +78,7 @@
             <a href="#" ng-click="selectExample(example.index)" ng-class="{'active':qSelected===example.index}"
                class="list-group-item query-{{example.index}}" ng-repeat="example in snorql.examples|filter:filter">
               <h5 class="list-group-item-heading">{{example.title}}</h5>
-              <p class="list-group-item-text"><span  class=" label label-default"  >
+              <p class="list-group-item-text"><span  class=" label label-snorql"  >
                 {{example.tags}}</span></p>
             </a>
 
