--- a/app/assets/partials/home.html
+++ b/app/assets/partials/home.html
@@ -27,7 +27,7 @@
           <div class=" snorql " style="min-height:60px">
             <div class="snorql-info" ng-show="waiting">{{message}}</div>
             <div class="snorql-info" ng-show="error">{{error}}</div>
-            <div class="snorql-info" ng-show="executionTime">Query time is {{executionTime}}[s]</div>
+            <div class="snorql-info" ng-show="executionTime">Query time is {{executionTime}}[s] for {{snorql.result.results.bindings.length||0}} rows</div>
             <div class=" " sparql-formatter="snorql.result"></div>
           </div>
           
