--- a/app/assets/partials/page.html
+++ b/app/assets/partials/page.html
@@ -5,8 +5,8 @@
         <!-- LEFT PANE -->
           <div class="col-sm-4 col-lg-3 sidebar">
             <ul class="nav nav-sidebar">
-              <li ng-class="{'active':isActiveElement('')}"><a href="/doc">Home</a></li>
-              <li ng-class="{'active':isActiveElement('faq')}"><a href="/doc/faq">FAQ</a></li>
+              <li ng-class="{'active':isActiveElement('doc/home')}"><a href="/doc">Home</a></li>
+              <li ng-class="{'active':isActiveElement('doc/faq') }"><a href="/doc/faq">FAQ</a></li>
             </ul>
             <ul class="nav nav-sidebar">
               <li ng-repeat="rh in rdfHelp | filter : rdfHelp.triples.predicate" ng-class="{'active':isActiveElement(rh.typeName.replace(':',''))}")>
@@ -14,13 +14,12 @@
                   <i class="icon-chevron-right"></i>{{rh.typeName|cleanType}}
                   ({{rh.instanceCount}})
                 </a>
-              </li>            
+              </li>
             </ul>
           </div>
-        <!-- CENTER PANE -->
-          <markdown class="col-sm-8 col-sm-offset-4 col-lg-9 col-lg-offset-3 main"  md-src="{{mdFile}}">
+          <!-- MARKDOWN PANE -->
+          <markdown class="col-sm-8 col-sm-offset-4 col-lg-9 col-lg-offset-3 main"  md-src="{{mdFile}}"/>
 
-          </markdown>   
         </div>
       </div>
       <hr>
