--- a/app/assets/partials/page.html
+++ b/app/assets/partials/page.html
@@ -1,25 +1,16 @@
     <div id="content" class="content " ng-controller="HelpCtrl">
+      
       <!-- CONTENT -->
-      <div class="container-fluid">
+      <div class="container-fluid" ng-init="initHelp()">
         <div class="row">
+
         <!-- LEFT PANE -->
           <div class="col-sm-4 col-lg-3 sidebar">
-            <ul class="nav nav-sidebar">
-              <li ng-class="{'active':isActiveElement('doc/home')}"><a href="/doc">Home</a></li>
-              <li ng-class="{'active':isActiveElement('doc/faq') }"><a href="/doc/faq">FAQ</a></li>
-            </ul>
-            <ul class="nav nav-sidebar">
-              <li ng-repeat="rh in rdfHelp | filter : rdfHelp.triples.predicate" ng-class="{'active':isActiveElement(rh.typeName.replace(':',''))}")>
-                <a ng-href="/doc/entity/{{rh.typeName|cleanType}}">
-                  <i class="icon-chevron-right"></i>{{rh.typeName|cleanType}}
-                  ({{rh.instanceCount}})
-                </a>
-              </li>
-            </ul>
+            <help-toc />
           </div>
-          <!-- MARKDOWN PANE -->
-          <markdown class="col-sm-8 col-sm-offset-4 col-lg-9 col-lg-offset-3 main"  md-src="{{mdFile}}"/>
 
+          <!-- PAGE PANE -->
+          <div ng-include="'html/np-help.doc.html'" ng-controller="DocCtrl" class="col-sm-8 col-sm-offset-4 col-lg-9 col-lg-offset-3 main"/>
         </div>
       </div>
       <hr>
