--- a/app/assets/partials/page.html
+++ b/app/assets/partials/page.html
@@ -1,20 +1,5 @@
     <div id="content" class="content " ng-controller="HelpCtrl">
       
-      <!-- CONTENT -->
-      <div class="container-fluid" ng-init="initHelp()">
-        <div class="row">
-
-        <!-- LEFT PANE -->
-          <div class="col-sm-4 col-lg-3 sidebar">
-            <help-toc />
-          </div>
-
           <!-- PAGE PANE -->
-          <div ng-include="'html/np-help.doc.html'" ng-controller="DocCtrl" class="col-sm-8 col-sm-offset-4 col-lg-9 col-lg-offset-3 main"/>
-        </div>
-      </div>
-      <hr>
-      <footer>
-        <p>&copy; CALIPHO @ SIB 2014</p>
-      </footer>
+          <div ng-include="'html/np-help.doc.html'" ng-controller="DocCtrl" class="col-xs-12 col-lg-9  main"/>
     </div><!--/.container-->
