--- a/app/assets/partials/home.html
+++ b/app/assets/partials/home.html
@@ -9,7 +9,7 @@
           <div class="snorql">
             <h5>SPARQL explorer for <a ng-href="{{snorql.endpoint()}}">{{snorql.endpoint()}}</a></h5>
             <a href="#" ng-click="showPrefixes = !showPrefixes">{{showPrefixes? "Hide SPARQL prefixes" : "PREFIX ..."}}</a>
-            <ul ng-if="showPrefixes"  class="list-unstyled prefixes">
+            <ul ng-show="showPrefixes"  class="list-unstyled prefixes">
               <li ng-repeat="(prefix, url) in snorql.prefixes()">PREFIX {{prefix}}:&lt;{{url}}&gt;</li>
             </ul>
             <form>
