--- a/app/assets/partials/home.html
+++ b/app/assets/partials/home.html
@@ -15,7 +15,7 @@
             <form>
 
               <textarea class="form-control" rows="12" ui-codemirror="cmOption" ng-model="snorql.query"></textarea>
-              <h5>Description</h5>
+              <h5>{{snorql.queryTitle}}</h5>
               <textarea readonly class="form-control" rows="8" ng-model="snorql.description"></textarea>
 
               <div class=" form-inline">
