--- a/app/css/snorql.css
+++ b/app/css/snorql.css
@@ -56,6 +56,7 @@ img{ width:16px;position:absolute;top:10px;left:50%;}
 }
 
 .example-list {
-	height: 80vh;
+	height: 90vh;
+	min-height: 580px;
 	overflow-y: scroll;
 }
