Fix help center pane css

--- a/app/assets/partials/help.html
+++ b/app/assets/partials/help.html
@@ -9,7 +9,7 @@
           </div>
 
           <!-- CENTER PANE -->
-          <div class="col-sm-8 col-sm-offset-4 col-lg-9 col-lg-offset-3 main" rdf-help></div>   
+          <div class="col-sm-8 col-sm-offset-4 col-lg-9 col-lg-offset-3 main help" rdf-help></div>
         </div>
       </div>
     </div><!--/.container-->
