--- a/app/css/app.css
+++ b/app/css/app.css
@@ -9,12 +9,10 @@ body {
 body {
   padding-top: 70px;
 }
-footer {
-  padding: 30px 0;
-}
 
 .content{
   margin:0 5px;
+  min-height: 80vh;
 }
 .prefixes {
   font-family: monospace;
