fixing snorql tracking id

--- a/app/assets/partials/home.html
+++ b/app/assets/partials/home.html
@@ -81,7 +81,7 @@
                 </p>
               </a>
             <div  ng-if="filterTag == 'My queries'">
-                <p>
+                <p style="margin: 10px">
                   You can create / save your own queries on the
                   <a target="_blank" href="https://search.nextprot.org/proteins/search?mode=advanced">search.nextprot.org</a> interface or
                   using the <a target="_blank" href="https://api.nextprot.org">API.</a>
